test/errors/cpp_generator_error/zs/sql_table_provider_class_clash_error.zs
// keep the package name short since we have problems on Windows with too long file/path name!
package sql_table_provider_class_clash_error;

sql_table IParameterProvider
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
